fixed header not aligned with content below

--- a/src/renderer/components/TracksListHeader/TracksListHeader.module.css
+++ b/src/renderer/components/TracksListHeader/TracksListHeader.module.css
@@ -11,6 +11,10 @@
   text-align: center;
 }
 
+.cellCover {
+  width: 58px;
+}
+
 .cellTrack {
   flex: 1;
 }
